--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 redis.host=localhost
 redis.port=6379
 
-ratelimit.helloGroup.windowSecs=100
-ratelimit.helloGroup.maxAllowed=2
+ratelimit.uiGroup.windowSecs=100
+ratelimit.uiGroup.maxAllowed=2
 
 
-ratelimit.goodByeGroup.windowSecs=2
-ratelimit.goodByeGroup.maxAllowed=2
+ratelimit.apiGroup.windowSecs=1
+ratelimit.apiGroup.maxAllowed=1
